fix align

--- a/css/styles.css
+++ b/css/styles.css
@@ -621,8 +621,6 @@ input {
     background-color: #FCFCFC;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-
-    text-align: center;
     padding: 72px 24px 24px 24px;
     overflow-y: auto;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
